--- a/employee-bonus/build.gradle
+++ b/employee-bonus/build.gradle
@@ -30,13 +30,11 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	
-	    // Springdoc OpenAPI dependencies
-    implementation 'org.springdoc:springdoc-openapi-core:1.6.4'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.4'
     
 }
 
